Updated Contacts, fixed spacing, header and footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,17 +18,19 @@ footer{
     background-color: #777777;
     color: #ffffff;
     text-align: center;
+    height: 25px;
     width: 100%;
+    padding-top: 20px;
     position: fixed;
     bottom: 0;
-    padding: 15px;
-    border-top: solid 5px rgb(0, 64,83)
+    border-top: solid 5px rgb(0, 64,83);
+    bottom: 0px;
 }
 
 .headerbar{
     background-color: #ffffff;
-    color: #000000;
-    position: relative;
+    position: fixed;
+    top: 0;
     height: 75px;
     border-bottom: solid #cccccc 5px;
     width: 100%;
@@ -37,33 +39,40 @@ footer{
 .nameplate{
     background-color:rgb(0, 64, 83);
     color:#ffffff;
+    font-size: 25px;
     position: relative;
     float: left;
-    height: 50px;
-    padding: 10 40 10 40;
-    margin-left: 40px;
+    height: inherit;
+    width: 200px;
     display: flex;
+    justify-content: center;
     align-items: center;
+    left:20%;
 }
 
 .nav{
     float: right;
-    display: flex;
-    align-items: center;
+    display: table;
+    position: fixed;
+    right: 20%;
 }
 
 #profpic{
     border:solid black 1px;
+    margin-right: 20px;
+    margin-left: 20px;
     clear: both;
     height: 25%;
     width: 25%;
     float: left;
 }
-.profilebody{
+.contentbody{
     background-color: #ffffff;
-    width:auto;
+    width:960px;
     padding: 10px;
-    margin: 20 50 0 50;
+    position: absolute;
+    top: 85px;
+    left: 20%;
 }
 
 .clearfix::after{
